# kedro-lung-segmentation-azureml

./: README.md
lung-segmentation/: README.md  pyproject.toml  requirements.txt  session_store.db
lung-segmentation/conf/base/: catalog.yml  parameters.yml
lung-segmentation/notebooks/: lungs_unet.ipynb  test.ipynb
lung-segmentation/src/: requirements.txt
lung-segmentation/src/lung_segmentation/: __init__.py  __main__.py  hooks.py  settings.py
lung-segmentation/src/lung_segmentation/datasets/: keras_model_dataset.py  numpy_dataset.py
lung-segmentation/src/lung_segmentation/pipelines/preprocessing/: nodes.py  pipeline.py
lung-segmentation/src/tests/pipelines/demo_pipeline/: test_pipeline.py
